<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_yolo</name>
  <version>0.1.0</version>
  <description>RealSense D435i with YOLO and Depth Estimation</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>ros2_launch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

